--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   </head>
   <body>
     <div id="container">
+      <input type="text" id="display" style="width: 80%; height: 40px; font-size: 24px; margin: auto; display: block; margin-top: 100px; text-align: center;" />
     <div>~</div>
     <div>1</div>
     <div>2</div>
@@ -112,5 +113,6 @@
     <div>alt</div>
     <div>ctrl</div>
 </div> 
+     <script src="script.js"></script>
   </body>
 </html> 
